tests/typing/errors/scope_escape_in_wildcard/scope.zf

goal forall f.
  (fun (a: type) (x: a). f x = x) _ 5.
