tests/typing/errors/scope_escape_in_wildcard/scope.expected
File "tests/typing/errors/scope_escape_in_wildcard/scope.zf", line 3, character 25-28:
3 |   (fun (a: type) (x: a). f x = x) _ 5.
                             ^^^
Error The typechecker inferred the type for the quantified variable `f` to be
      `a -> _`.
      That inference lead to infer that type to contain the variable `a`
      which is not in the scope of the inferred type.
      Variable `f` was bound at line 2, character 12-13
      Variable `a` was bound at line 3, character 7-16.
